fix the size of the Standing box in patron summary so that it won't shift the interface; make it always there.  We may want to do this differently
git-svn-id: svn://svn.open-ils.org/ILS/trunk@11822 dcc99617-32d9-48b4-a31d-7c20da2025e4

--- a/Open-ILS/xul/staff_client/server/skin/patron_summary.css
+++ b/Open-ILS/xul/staff_client/server/skin/patron_summary.css
@@ -3,7 +3,10 @@
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"); 
 @namespace html url("http://www.w3.org/TR/REC-html40"); 
 
+.NO_PENALTY { background-color: lime; color: black; }
 .PENALTY_RENEW { background-color: yellow; color: black; }
 .PENALTY_HOLD { background-color: orange; color: black; }
 .PENALTY_CIRC { background-color: red; color: white; }
 
+groupbox.standing { max-height: 7em; min-height: 7em; }
+groupbox.standing vbox { max-height: 5em; min-height: 5em; overflow: auto }
